--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gpst-js-basic-practice",
+  "name": "anagrams",
   "version": "1.0.0",
   "description": "Powered by ThoughtWorks School",
   "main": "app.js",
